fix: On hover collapsed counter show a box shadow in the backgroud

--- a/webapp/src/components/FavoritesCounter/FavoritesCounter.module.css
+++ b/webapp/src/components/FavoritesCounter/FavoritesCounter.module.css
@@ -21,6 +21,10 @@
   background-color: rgba(35, 31, 32, 1);
 }
 
+.FavoritesCounter.Collapsed:hover .bubble {
+  box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.5);
+}
+
 
 .FavoritesCounter.Collapsed {
   display: flex;
@@ -58,9 +62,9 @@
 }
 
 .FavoritesCounter.Collapsed .bubble {
-  min-width: 38px;
-  min-height: 33px;
-  border-radius: 17px;
+  min-width: 32px;
+  min-height: 28px;
+  border-radius: 13px;
   background-color: #231F20;
   border: .25px solid var(--text);
   display: flex;
